# alef-bot

./: Dockerfile  README.md  README.rst  docker-compose.yaml  pyproject.toml
src/alef_bot/: app.py  create_bot.py  settings.py  tables.py  telebot.py
src/alef_bot/handlers/: client.py
src/alembic/migrations/: env.py
src/alembic/migrations/versions/: 09273939a586_first.py
tests/: main.py  mock_file.html  test_alef_bot.py
