[tool.poetry]
name = "alef-bot"
version = "0.1.0"
description = ""
authors = ["suband74 <suband@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
bs4 = "^0.0.1"
python-dotenv = "^0.20.0"
SQLAlchemy = "^1.4.39"
alembic = "^1.8.0"
psycopg2-binary = "^2.9.3"
aiogram = "^2.21"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
